--- a/index.html
+++ b/index.html
@@ -11,7 +11,40 @@
 		<meta charset="UTF-8" />
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Vite + React + TS</title>
+		<title>Rocky Mountain Plant Show | July 19–20, 2025</title>
+		<meta
+			name="description"
+			content="Join us for the Rocky Mountain Plant Show — July 19–20, 2025. A weekend of rare plants, education, and community in Centennial, Colorado."
+		/>
+
+		<meta
+			property="og:title"
+			content="Rocky Mountain Plant Show | July 19–20, 2025"
+		/>
+		<meta
+			property="og:description"
+			content="A weekend of rare plants, education, and community at the Rocky Mountain Plant Show in Centennial, CO."
+		/>
+		<meta property="og:type" content="website" />
+		<meta property="og:url" content="https://rockymountainplantshow.com/" />
+		<meta
+			property="og:image"
+			content="https://rockymountainplantshow.com/social-share.png"
+		/>
+
+		<meta name="twitter:card" content="summary_large_image" />
+		<meta
+			name="twitter:title"
+			content="Rocky Mountain Plant Show | July 19–20, 2025"
+		/>
+		<meta
+			name="twitter:description"
+			content="Join us for a weekend of rare plants, education, and community in Centennial, Colorado."
+		/>
+		<meta
+			name="twitter:image"
+			content="https://rockymountainplantshow.com/social-share.png"
+		/>
 	</head>
 	<body>
 		<div id="root"></div>
